# JsonSQL

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/jsonsql/: jsonsql.py
tests/: jsonsqltest.py  test.py  test_full.py  test_jsonsql.py  test_logic.py
